More Functions & Targets
add set velocity function
Rename function targets to has_*
Functions for Entity Outcome
Add basic ItemStackProvider system